--- a/Stories/index.html
+++ b/Stories/index.html
@@ -42,7 +42,7 @@ Si estás aquí, seguramente te gusta escribir tus propias historias.
 ¿Estás preparado para comenzar?
 
 [[Empezar el tutorial de Twine-&gt; Índice]]
-Ir a la &lt;a target=&quot;_blank&quot; href=&quot;La librer_a encantada.html&quot;&gt; historia. &lt;/a&gt;
+Ir a la &lt;a target=&quot;_blank&quot; href=&quot;https://evaocanna.github.io//Stories/libreria_encantada.html&quot;&gt; historia. &lt;/a&gt;
 
 Si quieres consultar la obra No World 4 Tomorrow en la que me inspiro, haz clik &lt;a target=&quot;_blank&quot; href=&quot;https://youandco2.org/NW4T/&quot;&gt;aquí &lt;/a&gt;.
 </tw-passagedata><tw-passagedata pid="2" name=" Índice" tags="" position="250,75" size="100,100">Hagamos una historia Twine. ¡Aprender lo básico es muy sencillo!
@@ -100,7 +100,7 @@ Para cambiar el fondo de una palabra, una línea, un párrafo, sucede exactament
 
 `@``@background-color:red;@@` sería el código CSS que se debe utilizar.
 
-Estos cambios son cambios en línea, si quieres hacer cambios que afecten a toda la historia es mejor utilizar la &lt;a target=&quot;_blank&quot; href=&quot;http://twinery.org/wiki/stylesheet&quot;&gt;hojo de estilos CSS.&lt;/a&gt;.
+Estos cambios son cambios en línea, si quieres hacer cambios que afecten a toda la historia es mejor utilizar la &lt;a target=&quot;_blank&quot; href=&quot;http://twinery.org/wiki/stylesheet&quot;&gt;hoja de estilos CSS.&lt;/a&gt;.
 
 Los básicos de las hojas de estilo se describen en la sección llamada [[fondo|fondo]]. También puedes volver al [[Inicio| Índice]] para aprender sobre otras funciones.</tw-passagedata><tw-passagedata pid="7" name="imágenes" tags="" position="450,425" size="100,100">Añadir imágenes puede parecer más complicado que añadir enlaces pero es mucho más fácil.
 
