--- a/Stories/index.html
+++ b/Stories/index.html
@@ -35,7 +35,7 @@ a:hover {
   color: lightgreen;
   size: 35px;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Twine: Escribe tu propia aventura" tags="" position="100,200" size="100,100">Bienvenido/a a esta nueva aventura. 
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Twine: Escribe tu propia aventura" tags="" position="100,200" size="100,100">&lt;h1&gt;&#39;&#39;Bienvenido/a a esta nueva aventura.&#39;&#39;&lt;/h1&gt; 
 
 Si estás aquí, seguramente te gusta escribir tus propias historias. 
 
