--- a/Stories/libreria_encantada.html
+++ b/Stories/libreria_encantada.html
@@ -27,10 +27,17 @@ body, tw-story{
 tw-story [tags="FELICIDADES"]{
   background-image: "https://img.freepik.com/foto-gratis/profundidades-misteriosa-aventura-submarina-azul-generada-ia_24640-81120.jpg";
   background-size: cover;}
-  </style><script role="script" id="twine-user-script" type="text/twine-javascript">var audio = document.createElement('audio');
+
+@import url ('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,600;1,200;1,500&display=swap');
+  
+h1 {
+  font-family: "https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,600;1,200;1,500&family=Zeyada&display=swap";
+  font-size: 60px;
+  color: PaleVioletRed;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">var audio = document.createElement('audio');
 audio.src= 'that-is-my-comedy-164471.mp3';
 audio.loop= true;
-audio.play ();</script><tw-passagedata pid="1" name="La Librería Encantada" tags="librería" position="100,300" size="100,100">&#39;&#39;&lt;em&gt;La Librería Encantada&lt;/em&gt;&#39;&#39;
+audio.play ();</script><tw-passagedata pid="1" name="La Librería Encantada" tags="librería" position="100,300" size="100,100">&lt;h1&gt;&#39;&#39;&lt;em&gt;La Librería Encantada&lt;/em&gt;&#39;&#39;&lt;/h1&gt;
 
 Eres un estudiante universitario aficionado a los libros. Un día, mientras caminas por la ciudad, encuentras una pequeña librería que nunca habías visto antes. El escaparate está lleno de libros antiguos y polvorientos, y una misteriosa sensación te atrae hacia la puerta.
 
@@ -45,7 +52,7 @@ Eres un estudiante universitario aficionado a los libros. Un día, mientras cami
 
 
 
-</tw-passagedata><tw-passagedata pid="2" name=" Dentro de la librería" tags="" position="300,50" size="100,100">&#39;&#39;&lt;em&gt;Dentro de la Librería&lt;/em&gt;&#39;&#39;
+</tw-passagedata><tw-passagedata pid="2" name=" Dentro de la librería" tags="" position="300,50" size="100,100">&lt;h1&gt;&#39;&#39;&lt;em&gt;Dentro de la Librería&lt;/em&gt;&#39;&#39;&lt;/h1&gt;
 
 Dentro de la librería, una campanilla suena suavemente al abrir la puerta. El lugar está lleno de estantes llenos de libros de todas las formas y tamaños. Parece que la librería se extiende infinitamente en todas direcciones. Un anciano de aspecto amable está detrás del mostrador y te mira con una sonrisa.
 
@@ -59,7 +66,7 @@ Dentro de la librería, una campanilla suena suavemente al abrir la puerta. El l
 
 [[Mejor doy la vuelta y entro a la librería-&gt; Dentro de la librería]] 
 
-&lt;img src= &#39;https://images.pexels.com/photos/17456631/pexels-photo-17456631/free-photo-of-ciudad-punto-de-referencia-espana-turismo.jpeg&#39; width= 200px text-align= center&gt;</tw-passagedata><tw-passagedata pid="4" name="Conversando con el anciano" tags="" position="300,275" size="100,100">&#39;&#39;&lt;em&gt; Conversando con el Anciano&lt;/em&gt;&#39;&#39;
+&lt;img src= &#39;https://images.pexels.com/photos/17456631/pexels-photo-17456631/free-photo-of-ciudad-punto-de-referencia-espana-turismo.jpeg&#39; width= 200px text-align= center&gt;</tw-passagedata><tw-passagedata pid="4" name="Conversando con el anciano" tags="" position="300,275" size="100,100">&lt;h1&gt;&#39;&#39;&lt;em&gt; Conversando con el Anciano&lt;/em&gt;&#39;&#39;&lt;/h1&gt;
 
 El anciano te cuenta la historia de la librería. Dice que esta librería es mágica y que los libros que contiene pueden llevarte a mundos desconocidos. También te dice que, si estás dispuesto a asumir la responsabilidad, puedes tomar un libro prestado, pero debes devolverlo en un plazo determinado o enfrentarás consecuencias.
 
@@ -68,35 +75,29 @@ El anciano te cuenta la historia de la librería. Dice que esta librería es má
 [[Declinas la oferta y sales de la librería.-&gt;Fin de la aventura]]
 
 
- &lt;background-video:url(&quot;leer libros.mp4&quot;) background-size:cover&gt;</tw-passagedata><tw-passagedata pid="5" name=" El libro" tags="" position="475,25" size="100,100">&#39;&#39;&lt;em&gt;El libro&lt;/em&gt;&#39;&#39;
+ &lt;background-video:url(&quot;leer libros.mp4&quot;) background-size:cover&gt;</tw-passagedata><tw-passagedata pid="5" name=" El libro" tags="" position="475,25" size="100,100">&lt;h1&gt;&#39;&#39;&lt;em&gt;El libro&lt;/em&gt;&#39;&#39;&lt;/h1&gt;
 
 Sigues paseando y ves cómo cada libro tiene un título intrigante.
 
-
 * &quot;El Libro de los Sueños Perdidos&quot;.
-
 * &quot;La Aventura del Tiempo&quot;.
-
 * &quot;El Secreto del Bosque Encantado&quot;.
 
 Seleccionas un libro y sales de la librería. Cuando abres el [[libro-&gt;Felicidades]], de repente te ves transportado a un mundo totalmente nuevo y emocionante.
 
 &lt;audio src=&quot;https://tempassets.yolasite.com/resources/Walking%20on%20wood%20sound%20effect.mp3&quot; autoplay&gt;</tw-passagedata><tw-passagedata pid="6" name="Fin de la aventura" tags="" position="550,150" size="100,100">¡VAYA! Has decidido salir de la librería, así que aquí termina tu aventura.
 
-[[Me lo he pensado mejor, quiero volver a la librería.-&gt;Conversando con el anciano]]</tw-passagedata><tw-passagedata pid="7" name="Elige un libro" tags="" position="500,300" size="100,100">&#39;&#39;&lt;em&gt;Elige un Libro&lt;/em&gt;&#39;&#39;
+[[Me lo he pensado mejor, quiero volver a la librería.-&gt;Conversando con el anciano]]</tw-passagedata><tw-passagedata pid="7" name="Elige un libro" tags="" position="500,300" size="100,100">&lt;h1&gt;&#39;&#39;&lt;em&gt;Elige un Libro&lt;/em&gt;&#39;&#39;&lt;/h1&gt;
 
 El anciano te muestra una selección de libros. Cada uno tiene un título intrigante.
 
-
 * &quot;El Libro de los Sueños Perdidos&quot;.
-
 * &quot;La Aventura del Tiempo&quot;.
-
 * &quot;El Secreto del Bosque Encantado&quot;.
 
 Seleccionas un libro y sales de la librería. Cuando abres el [[libro-&gt;Felicidades]], de repente te ves transportado a un mundo totalmente nuevo y emocionante.
 
-</tw-passagedata><tw-passagedata pid="8" name="Felicidades" tags="FELICIDADES" position="700,100" size="100,100">&#39;&#39;&lt;em&gt;¡Felicidades!&lt;/em&gt;&#39;&#39;
+</tw-passagedata><tw-passagedata pid="8" name="Felicidades" tags="FELICIDADES" position="700,100" size="100,100">&lt;h1&gt;&#39;&#39;&lt;em&gt;¡Felicidades!&lt;/em&gt;&#39;&#39;&lt;/h1&gt;
 
 Has comenzado una emocionante aventura en &quot;La Librería Encantada&quot;. Tu destino está en tus manos mientras exploras el libro que has elegido. ¿Qué secretos descubrirás en este mundo mágico? ¡Dependerá de tus elecciones!
 
